<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".FirstPage">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            />


        <EditText
            android:id="@+id/name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="text"/>

        <!-- Question 1  -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest1"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/ans_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/choice1"/>

            <RadioButton
                android:id="@+id/ans_option11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/choice2"/>

            <RadioButton
                android:id="@+id/ans_option111"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/choice3"/>

        </RadioGroup>

        <!--          Question 2                           -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/quest2"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/ans_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/choice4"/>

            <RadioButton
                android:id="@+id/ans_option22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/choice5"/>

            <RadioButton
                android:id="@+id/ans_option222"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/choice6"/>

        </RadioGroup>


        <!--          Question 3                          -->
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/quest3"/>

        <RadioGroup

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/ans_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/choice7"/>

            <RadioButton
                android:id="@+id/ans_option33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/choice8"/>

            <RadioButton
                android:id="@+id/ans_option333"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/choice9"/>

        </RadioGroup>

        <!--          Question 4                        -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/quest4"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/ans_option4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/choice10"/>

            <RadioButton
                android:id="@+id/ans_option44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/choice11"/>

            <RadioButton
                android:id="@+id/ans_option444"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice12"/>

        </RadioGroup>

        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#008000"
            android:textColor="#fff"
            android:text="@string/submit2"/>


    </LinearLayout>
</ScrollView>
