<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/naija"
        android:paddingTop="16dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/naijaflag"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/homePage"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingTop="15dp"
        android:gravity="center_horizontal"

        />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#008000"
        android:textColor="#fff"
        android:layout_marginTop="60dp"
        android:text="@string/submit1"/>

</LinearLayout>